# vcompare

./: .gitignore  CMakeLists.txt  contributors.txt
src/: Convert.cpp  Convert.h  Data.h  DebugMacros.h  DirectoryDatabase.cpp  DirectoryDatabase.h  Field.hpp  Loader.h  TecplotLoader.cpp  TecplotLoader.h  TreeItem.cpp  TreeItem.h  TreeModel.cpp  TreeModel.h  Types.h  Utilities.h  VCompare.cpp  VCompare.h  VCompare.ui  VCompareDriver.cpp  Validate.cpp  Validate.h  VectorField.cpp  VectorField.h  VectorFieldSet.cpp  VectorFieldSet.h
